<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment"
    android:background="@color/gray">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fragment_register_userPhoto"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="95dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/fragment_register_userName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_userPhoto"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fragment_register_userPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_userEmail"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fragment_register_userEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_userName"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/fragment_register_registerButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_style"
        android:text="@string/Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_userPassword"
        tools:ignore="TextContrastCheck" />s

    <Button
        android:id="@+id/fragment_register_mainPageButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_style"
        android:text="@string/mainpage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_registerButton"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
