<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/fragment_login_appLogo"
        android:layout_width="330dp"
        android:layout_height="220dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/appLogo"
        android:src="@drawable/blogging_free_download_png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_login_userEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_appLogo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fragment_login_userPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_userEmail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/fragment_login_loginButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_style"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_userPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/fragment_login_mainPageButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_style"
        android:text="@string/mainpage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_loginButton"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>