<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_main_appLogo"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/appLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blogging_free_download_png" />

    <Button
        android:id="@+id/fragment_main_loginButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/button_style"
        android:text="@string/Login"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_appLogo"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/fragment_main_registerButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_style"
        android:text="@string/Register"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_loginButton"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/fragment_main_guestButton"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_style"
        android:text="@string/Continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_registerButton"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>